@@ -1,3 +1,7 @@
+ClipIt-1.4.1-20110525003
+
++ Added: We now also use png icons, if there are any.
+
 ClipIt-1.4.1-20110525002 - 25 May. 2011
 
 	+ Fixed: Numpad keys now work for selecting too.
